samples/_failures_safe/1761214866_b058ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e472514e.c: In function ‘main’:
./samples/SAFE/__tmp_e472514e.c:161:9: error: expected expression at end of input
  161 |         if (scanf("%d %d %d", &from, &to, &weight) !=
      |         ^~
./samples/SAFE/__tmp_e472514e.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e472514e.c:161:9: error: expected declaration or statement at end of input
